fixed mobile scrollbar

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  min-width: $mobile;
   background-color: $background-color-secondary;
   white-space: nowrap;
   text-align: center;
