--- a/src/sass/components/_header-home.scss
+++ b/src/sass/components/_header-home.scss
@@ -1,5 +1,6 @@
 .header-home {
-  @extend .container;
+  padding-left: 20px;
+  padding-right: 20px;
   position: relative;
   padding-top: 41px;
   padding-bottom: 97px;
