--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-  @extend .container;
+  padding: 0 20px;
   gap: 2px;
   @include flexbox(row, nowrap, center, center);
   margin-top: 40px;
